# Z-Filter-Mac

./: .gitignore  CMakeLists.txt  README.md
.claude/: README.md
.claude/agents/: code-reviewer.md  codebase-analyzer.md  codebase-locator.md  codebase-pattern-finder.md  test-runner.md  web-search-researcher.md
.claude/ai/: plan-2026-02-07-add-input-level-knob.md  plan-2026-02-07-fix-resonance-distortion.md
.claude/commands/: code-review.md  create-plan.md  implement-plan.md  research-codebase.md  research-prompt.md
Releases/Z-Filter.vst3/Contents/Resources/: moduleinfo.json
Releases/Z-Filter.vst3/Contents/x86_64-win/: Z-Filter.vst3
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/AirwindowsReference/: FilterReference.h
